<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/sayName"
                android:inputType="textPersonName"
                tools:ignore="Autofill"
                />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:hint="@string/sayLastName"
                android:layout_below="@id/firstName"
                android:inputType="textPersonName"
                tools:ignore="Autofill"

                />

            <EditText
                android:id="@+id/telephoneId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:layout_below="@id/lastName"
                android:hint="@string/editTelephone"
                android:inputType="phone"
                tools:ignore="Autofill"

                />

            <EditText
                android:id="@+id/cpfId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:layout_below="@id/telephoneId"
                android:hint="@string/cpfNumber"
                android:inputType="number"
                tools:ignore="Autofill"


                />



        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>